[gd_scene load_steps=10 format=3 uid="uid://8316xq78hm52"]

[ext_resource type="Texture2D" uid="uid://pd64151i7116" path="res://title/title.png" id="1_mqj7k"]
[ext_resource type="Script" path="res://title/title.gd" id="1_q0ohh"]
[ext_resource type="Texture2D" uid="uid://ddulmkrlnpggb" path="res://title/start.png" id="2_2msi8"]
[ext_resource type="Texture2D" uid="uid://dyvphspxsi4aj" path="res://title/option.png" id="3_yp7p7"]
[ext_resource type="Texture2D" uid="uid://ba17qbnqlak0l" path="res://title/gradient.tres" id="5_ojwct"]
[ext_resource type="Texture2D" uid="uid://cd70uxupkn66f" path="res://title/credits.png" id="6_rc1pj"]
[ext_resource type="Theme" uid="uid://bwwqme7ofdu4x" path="res://font/theme.tres" id="7_wbs5s"]
[ext_resource type="PackedScene" uid="uid://fban2wpkcfxe" path="res://transitions/transition_effect.tscn" id="7_x2qty"]
[ext_resource type="Texture2D" uid="uid://dvlimkl4d7vcv" path="res://title/Return_button.png" id="8_ivm0f"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_q0ohh")

[node name="Main" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_mqj7k")

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = 15.0
offset_right = 94.5
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="StartButton" type="TextureRect" parent="Main/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_2msi8")

[node name="OptionButton" type="TextureRect" parent="Main/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_yp7p7")

[node name="Option" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ojwct")

[node name="VBoxContainer" type="VBoxContainer" parent="Option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -63.0
offset_right = 108.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Option/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
columns = 2

[node name="Music" type="Label" parent="Option/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("7_wbs5s")
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="Option/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFX" type="Label" parent="Option/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("7_wbs5s")
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Option/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="ReturnButton" type="TextureRect" parent="Option/VBoxContainer"]
layout_mode = 2
texture = ExtResource("8_ivm0f")
stretch_mode = 3

[node name="Credits" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ojwct")

[node name="VBoxContainer" type="GridContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -124.0
offset_right = 191.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 2

[node name="Label" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_wbs5s")
text = "PROGRAMMING:
LANE MCMARTIN
&
ANDREW FREEMAN"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_wbs5s")
text = "DESIGN:
CHRIS LAPOINTE"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_wbs5s")
text = "ART:
KYLE SHOUHDA"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_wbs5s")
text = "MUSIC:
JON PORD"
horizontal_alignment = 1

[node name="ReplayButton" type="TextureRect" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = 76.0
offset_right = 54.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_ivm0f")

[node name="TransitionEffect" parent="." instance=ExtResource("7_x2qty")]
unique_name_in_owner = true

[node name="WinScreen" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rc1pj")

[connection signal="gui_input" from="Main/VBoxContainer/StartButton" to="." method="_on_start_gui_input"]
[connection signal="gui_input" from="Main/VBoxContainer/OptionButton" to="." method="_on_option_gui_input"]
[connection signal="value_changed" from="Option/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="Option/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="gui_input" from="Option/VBoxContainer/ReturnButton" to="." method="_on_return_button_gui_input"]
[connection signal="gui_input" from="Credits/ReplayButton" to="." method="_on_replay_button_gui_input"]
